# gameengine

./: .gitignore  CMakeLists.txt  CODEBASE_AUDIT.md  COMPLETE_SESSION_FINAL.md  FINAL_COMPLETION_REPORT.md  FINAL_SESSION_REPORT.md  GRAPHICS_API_SETUP.md  IMPLEMENTATION_SUMMARY.md  OPENGL_COMPLETE.md  QUICKSTART.md  README.md  REFACTOR_COMPLETE.md  REQUIREMENTS.md  ROADMAP.md  SESSION_SUMMARY.md  SOURCE_ENGINE_SUPPORT.md  TRIANGLE_DEMO_GUIDE.md  ULTIMATE_FINAL_REPORT.md  UPGRADE_SUMMARY.md  VULKAN_COMPLETE.md  build_asset_converter.bat  fix_build_errors.bat  install.bat  install.sh  setup_dependencies.bat  setup_dependencies.sh  smth.bat  verify_build.bat  verify_build.sh
.github/: ACTIONS_FIXED.md
.github/workflows/: build.yml  pr-check.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FULL_DAY_ROADMAP.md  GAME_IMPORTER_GUIDE.md  MODERN_UI_GUIDE.md  OPENGL_SETUP.md  ROADMAP.md  THIRD_PARTY_SETUP.md
examples/: CMakeLists.txt
examples/opengl_triangle/: CMakeLists.txt  README.md  main.cpp
examples/simple_triangle/: CMakeLists.txt  SimpleTriangle.cpp
include/: AISystem.h  AssetConverter.h  Components.h  ECS.h  EngineConfig.h.in  EngineUI.h  GameImporter.h  LuaScripting.h  LuaScriptingEngine.h  MotionControlSystem.h  PerformanceProfiler.h  PhysicsEngine.h  PostProcessing.h  PythonScripting.h  SourceEngineImporter.h  Systems.h
include/RHI/: RHIDefinitions.h  RHIDefinitions_documented.h  RHIDevice.h  RHIResource.h
include/RHI/D3D10/: D3D10Device.h
include/RHI/D3D11/: D3D11CommandBuffer.h  D3D11Device.h  D3D11Resource.h
include/RHI/D3D9/: D3D9Device.h
include/RHI/OpenGL/: OpenGLCommandBuffer.h  OpenGLDevice.h  OpenGLResource.h
include/RHI/Vulkan/: VulkanCommandBuffer.h  VulkanDescriptor.h  VulkanDevice.h  VulkanResource.h
scripts/setup/: download_glad.py  setup_dependencies.bat
shaders/: compile_shaders.bat  compile_shaders.sh  triangle.frag  triangle.vert  triangle_ps.hlsl  triangle_vs.hlsl
src/: CMakeLists.txt  SMTH.md  main.cpp
src/ai/: AISystem.cpp
src/core/: Engine.cpp  EngineErrorRecovery.cpp
src/graphics/: LightingEngine_dx11.cpp
src/motion/: MotionControlSystem.cpp
src/rhi/: RHIDevice.cpp
src/rhi/d3d10/: D3D10Device.cpp
src/rhi/d3d11/: D3D11CommandBuffer.cpp  D3D11Device.cpp  D3D11Resource.cpp
src/rhi/d3d9/: D3D9Device.cpp
src/rhi/opengl/: OpenGLCommandBuffer.cpp  OpenGLDevice.cpp  OpenGLResource.cpp
src/rhi/vulkan/: VulkanCommandBuffer.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanResource.cpp
src/scripting/: LuaScripting.cpp  PythonScripting.cpp
src/tools/: AssetConverter.cpp  asset_converter.cpp
src/ui/: EngineUI.cpp  EngineUI_Modern.cpp  ModernTheme.h  UISystem.cpp
src/utils/: GameImporter.cpp  UnityImporter.cpp  UnrealImporter.cpp
