cmake_minimum_required(VERSION 3.16)

file(GLOB_RECURSE ALL_CPP_FILES CONFIGURE_DEPENDS "*.cpp")

set(NEXUS_LIB_SOURCES)
set(NEXUS_EXCLUDED_SOURCES)

foreach(source_file IN LISTS ALL_CPP_FILES)
    get_filename_component(source_name "${source_file}" NAME)
    get_filename_component(source_dir "${source_file}" DIRECTORY)
    set(exclude_source FALSE)

    if(source_name MATCHES "^(main|main_debug|main_simple|texture_test)\\.cpp$")
        set(exclude_source TRUE)
    elseif(source_name MATCHES "(_backup|_clean|_fixed|_stub)\\.cpp$")
        set(exclude_source TRUE)
    elseif(source_dir STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}/tools")
        set(exclude_source TRUE)
    endif()

    if(exclude_source)
        list(APPEND NEXUS_EXCLUDED_SOURCES "${source_file}")
    else()
        list(APPEND NEXUS_LIB_SOURCES "${source_file}")
    endif()
endforeach()

list(LENGTH NEXUS_LIB_SOURCES NUM_SOURCES)
list(LENGTH NEXUS_EXCLUDED_SOURCES NUM_EXCLUDED_SOURCES)
message(STATUS "Building NexusCore with ${NUM_SOURCES} source files")
message(STATUS "Excluded ${NUM_EXCLUDED_SOURCES} alternate/tool source files from NexusCore")

add_library(NexusCore STATIC ${NEXUS_LIB_SOURCES})

target_include_directories(NexusCore
    PUBLIC
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}/include
        ${NEXUS_THIRD_PARTY_INCLUDE_DIRS}
)

if(JOLT_FOUND)
    target_include_directories(NexusCore PUBLIC ${JOLT_INCLUDE_DIRS})
    target_link_libraries(NexusCore PUBLIC ${JOLT_LIBRARIES})
endif()

if(NEXUS_LUA_ENABLED)
    target_include_directories(NexusCore PUBLIC ${LUA_INCLUDE_DIR})
    target_link_libraries(NexusCore PUBLIC ${LUA_LIBRARIES})
endif()

if(NEXUS_PYTHON_ENABLED)
    target_include_directories(NexusCore PUBLIC ${Python3_INCLUDE_DIRS})
    if(TARGET Python3::Python)
        target_link_libraries(NexusCore PUBLIC Python3::Python)
    else()
        target_link_libraries(NexusCore PUBLIC ${Python3_LIBRARIES})
    endif()
endif()

if(PHYSX_FOUND)
    target_include_directories(NexusCore PUBLIC ${PHYSX_INCLUDE_DIRS})
    target_link_libraries(NexusCore PUBLIC ${PHYSX_LIBRARIES})
endif()

if(FMOD_FOUND)
    target_include_directories(NexusCore PUBLIC ${FMOD_INCLUDE_DIRS})
    target_link_libraries(NexusCore PUBLIC ${FMOD_LIBRARIES})
endif()

if(ASSIMP_FOUND)
    if(TARGET assimp::assimp)
        target_link_libraries(NexusCore PUBLIC assimp::assimp)
    else()
        target_include_directories(NexusCore PUBLIC ${ASSIMP_INCLUDE_DIRS})
        target_link_libraries(NexusCore PUBLIC ${ASSIMP_LIBRARIES})
    endif()
endif()

if(TARGET NexusImGui)
    target_link_libraries(NexusCore PUBLIC NexusImGui)
endif()

if(SDL2_FOUND)
    target_include_directories(NexusCore PUBLIC ${SDL2_INCLUDE_DIR})
    target_link_libraries(NexusCore PUBLIC ${SDL2_LIBRARIES})
endif()

if(NEXUS_VULKAN_ENABLED)
    target_include_directories(NexusCore PUBLIC ${Vulkan_INCLUDE_DIRS})
    if(TARGET Vulkan::Vulkan)
        target_link_libraries(NexusCore PUBLIC Vulkan::Vulkan)
    else()
        # Headers only - need to link vulkan-1 manually on Windows
        if(WIN32)
            # Try to find vulkan-1.lib in system paths or SDK
            find_library(VULKAN_LIBRARY vulkan-1
                PATHS "$ENV{VULKAN_SDK}/Lib"
                      "C:/VulkanSDK/*/Lib"
                PATH_SUFFIXES x64 x86_64
            )
            if(VULKAN_LIBRARY)
                target_link_libraries(NexusCore PUBLIC ${VULKAN_LIBRARY})
                message(STATUS "Linked Vulkan library: ${VULKAN_LIBRARY}")
            else()
                message(WARNING "Vulkan headers found but vulkan-1.lib not found. Install full Vulkan SDK for linking.")
            endif()
        elseif(UNIX)
            find_library(VULKAN_LIBRARY vulkan)
            if(VULKAN_LIBRARY)
                target_link_libraries(NexusCore PUBLIC ${VULKAN_LIBRARY})
            endif()
        endif()
    endif()
endif()

if(NEXUS_OPENGL_ENABLED)
    target_link_libraries(NexusCore PUBLIC OpenGL::GL)
    if(TARGET glad)
        target_link_libraries(NexusCore PUBLIC glad)
        message(STATUS "Linked GLAD library to NexusCore")
    endif()
endif()

target_compile_definitions(NexusCore
    PUBLIC
        NEXUS_STATIC_BUILD
        $<$<BOOL:${NEXUS_PYTHON_ENABLED}>:NEXUS_PYTHON_ENABLED>
        $<$<BOOL:${NEXUS_LUA_ENABLED}>:NEXUS_LUA_ENABLED>
        $<$<BOOL:${NEXUS_JOLT_PHYSICS_ENABLED}>:NEXUS_JOLT_PHYSICS_ENABLED>
        $<$<BOOL:${NEXUS_PHYSX_ENABLED}>:NEXUS_PHYSX_ENABLED>
        $<$<BOOL:${NEXUS_FMOD_ENABLED}>:NEXUS_FMOD_ENABLED>
        $<$<BOOL:${NEXUS_ASSIMP_ENABLED}>:NEXUS_ASSIMP_ENABLED>
        $<$<BOOL:${NEXUS_IMGUI_ENABLED}>:NEXUS_IMGUI_ENABLED>
        $<$<BOOL:${NEXUS_SDL2_ENABLED}>:NEXUS_SDL2_ENABLED>
        $<$<BOOL:${NEXUS_VULKAN_ENABLED}>:NEXUS_VULKAN_ENABLED>
        $<$<BOOL:${NEXUS_OPENGL_ENABLED}>:NEXUS_OPENGL_ENABLED>
        $<$<BOOL:${NEXUS_DIRECTX11_ENABLED}>:NEXUS_DIRECTX11_ENABLED>
        $<$<BOOL:${NEXUS_ADVANCED_RENDERING_ENABLED}>:NEXUS_ADVANCED_RENDERING_ENABLED>
        $<$<BOOL:${NEXUS_RAY_TRACING_ENABLED}>:NEXUS_RAY_TRACING_ENABLED>
        $<$<BOOL:${NEXUS_VR_ENABLED}>:NEXUS_VR_ENABLED>
        $<$<BOOL:${NEXUS_NETWORKING_ENABLED}>:NEXUS_NETWORKING_ENABLED>
        $<$<BOOL:${NEXUS_C_API_ENABLED}>:NEXUS_C_API_ENABLED>
        $<$<BOOL:${NEXUS_GAME_IMPORTERS_ENABLED}>:NEXUS_GAME_IMPORTERS_ENABLED>
        $<$<BOOL:${NEXUS_CONSOLE_PLATFORMS_ENABLED}>:NEXUS_CONSOLE_PLATFORMS_ENABLED>
)

if(WIN32)
    target_compile_definitions(NexusCore
        PUBLIC
            NEXUS_PLATFORM_WINDOWS
            NOMINMAX
            WIN32_LEAN_AND_MEAN
            UNICODE
            _UNICODE
    )

    target_link_libraries(NexusCore
        PUBLIC
            d3d11.lib dxgi.lib d3dcompiler.lib
            dinput8.lib dxguid.lib dsound.lib winmm.lib
            user32.lib gdi32.lib shell32.lib ole32.lib oleaut32.lib
            uuid.lib comdlg32.lib advapi32.lib psapi.lib pdh.lib
            comctl32.lib kernel32.lib ws2_32.lib setupapi.lib version.lib
    )
else()
    message(WARNING "NexusCore currently targets Windows/DirectX. Non-Windows builds may require platform stubs.")
endif()

set_target_properties(NexusCore PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
    add_executable(NexusEngine main.cpp)
    target_link_libraries(NexusEngine PRIVATE NexusCore)
    set_target_properties(NexusEngine PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    )
    message(STATUS "Created NexusEngine executable")
endif()

if(NEXUS_BUILD_TOOLS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tools/asset_converter.cpp")
    add_executable(NexusAssetConverter tools/asset_converter.cpp tools/AssetConverter.cpp)
    target_link_libraries(NexusAssetConverter PRIVATE NexusCore)
    target_include_directories(NexusAssetConverter PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}/include
    )
    set_target_properties(NexusAssetConverter PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    )
    message(STATUS "Created NexusAssetConverter tool")
endif()

file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/logs)

message(STATUS "NexusCore library configured successfully")

